[package]
name = "mpc_sig_abs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
serde = { version = "1", features = ["derive"] }
zeroize = { version = "*", features = ["derive"] }
erreur = "0.1"