[package]
name = "mpc_sig_abs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
async-trait = "*"
erreur = "0.1"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1", features = ["derive"] }
zeroize = { version = "*", features = ["derive"] }
