[package]
name = "mpc_sig_abs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10"
async-trait = "*"
erreur = "0.1"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde-pickle = "1"
zeroize = { version = "*", features = ["derive"] }
